Fix save button alignment

--- a/app/assets/stylesheets/issues/application.sass
+++ b/app/assets/stylesheets/issues/application.sass
@@ -22,6 +22,9 @@
 .form-horizontal legend + p
   margin: -20px 0 27px
 
+.form-horizontal .form-actions-left
+  padding-left: 19px
+
 .form-horizontal textarea
   width: 99%
   height: 150px
